--- a/css/main.css
+++ b/css/main.css
@@ -129,6 +129,30 @@ body {
    color: var(--mainGrey);
 }
 
+.dropdown .dropdown-menu {
+   -webkit-transition: all 0.3s;
+   -moz-transition: all 0.3s;
+   -ms-transition: all 0.3s;
+   -o-transition: all 0.3s;
+   transition: all 0.3s;
+
+   max-height: 0;
+   display: block;
+   overflow: hidden;
+   opacity: 0;
+}
+
+.dropdown.show .dropdown-menu { /* For Bootstrap 4, use .dropdown.show instead of .dropdown.open */
+   max-height: 300px;
+   opacity: 1;
+}
+
+@media (max-width: 768px) {
+   .dropdown .dropdown-menu {
+      padding: 0px;
+   }
+}
+
 /* header */
 .header {
    clip-path: polygon(0 0,100% 0,100% 95%,50% 100%,0 95%);
