--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ body {
 
 /* Global Styles */
 .bell-fonts {
-   font-family: 'Exo', sans-serif; 
+   font-family: 'Exo', sans-serif;
 } 
 
 /* section padding */
@@ -42,7 +42,7 @@ body {
    grid-row-gap: 2rem;
 }
 
-@media screen and (min-width:1100px){
+@media screen and (min-width: 1100px){
 .grid-container--medium-2 {
    display: grid;
    grid-template-columns: 1fr 1fr;
@@ -105,10 +105,11 @@ body {
 .navbar-toggler {
    outline-color: var(--mainWhite)!important;
 }
-
+  
 .nav-link {
    color: var(--mainWhite);
    text-transform: capitalize;
+   font-family: cursive;
    font-size: 1rem;
 }
 
@@ -130,11 +131,11 @@ body {
 }
 
 .dropdown .dropdown-menu {
-   -webkit-transition: all 0.3s;
-   -moz-transition: all 0.3s;
-   -ms-transition: all 0.3s;
-   -o-transition: all 0.3s;
-   transition: all 0.3s;
+   -webkit-transition: all 0.8s;
+   -moz-transition: all 0.8s;
+   -ms-transition: all 0.8s;
+   -o-transition: all 0.8s;
+   transition: all 0.8s;
 
    max-height: 0;
    display: block;
@@ -192,7 +193,7 @@ body {
 }
 
 .text-uppercase {
-   font-family: 'Bitter', serif;
+   font-family: 'Bitter', sans-serif;
 }
 
 .title {
@@ -252,6 +253,7 @@ body {
    display: grid;
    grid-template-columns: 100%;
    grid-template-rows: auto 1fr;
+   grid-gap: 2rem;
 }
 
 .about_img-item {
@@ -269,15 +271,530 @@ body {
 
 .about-container {
    grid-template-rows: 1fr 1fr;
- }
+  }
 }
 
-/* Background Photo */
+/** Education **/
+.education {
+   background: #fff;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   padding: 30px 0px;
+}
+
+.education img {
+   margin: 5px 0px;
+}
+
+.education .elementary-img {
+   width: 20%;
+}
+
+.education .elementary-img2 {
+   width: 100%;
+}
+
+.education .schools-img {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.education .schools-img img {
+   width: 35%;
+   margin: 25px;
+   border-radius: 5px;
+   border: 3px solid #323131;
+}
+
+.education .elementary-img2 {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.education .elementary-img2 img {
+   width: 35%;
+   border-radius: 5px;
+   border: 3px solid #323131;
+   margin: 25px;
+}
+
+.education .btn {
+   background: #d54900;
+   border: 2px solid #303131;
+   margin: 10px 0;
+}
+
+.education .btn a {
+   color: #fff;
+   text-decoration: none;
+}
+
+.education .btn:hover {
+   background: #ff8600;
+}
+
+.education .info-text {
+   width: 75%;
+}
+
+.education .card-section {
+   width: 75%;
+   display: grid;
+   grid-template-columns: repeat(3, 1fr);
+   grid-gap: 25px;
+   padding: 25px 0px;
+   margin-left: 15px;
+}
+
+.education .card-section .card {
+   width: 100%;
+   border: none;
+}
+
+.education .card-section .card h5 {
+   background: #323131;
+   color: #fff;
+   padding: 5px;
+   border-radius: 3px;
+}
+
+@media (max-width: 768px) {
+   .education .card-section {
+      grid-template-columns: 1fr;
+   }
+
+   .education .elementary-img {
+      width: 30%;
+   }
+}
+
+@media (max-width: 600px) {
+   .education h1 {
+      font-size: 30px;
+   }
+
+   .education .schools-img {
+      flex-direction: column;
+   }
+
+   .education .schools-img img {
+      width: 75%;
+   }
+
+   .education .elementary-img {
+      width: 50%;
+   }
+
+   .education .elementary-img2 img {
+      width: 75%;
+   }
+}
+
+/** Community **/
+.community {
+   background: var(--mainWhite);
+}
+
+.community h1 {
+   text-align: center;
+   padding: 25px 0px;
+}
+
+.community .overview-text p {
+   padding: 25px 75px;
+}
+
+.community .community-img {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.community .community-img img {
+   width: 35%;
+   border-radius: 5px;
+   margin: 15px 0px;
+}
+
+.community .community-img .img-2 {
+   width: 15%;
+   border: none;
+   margin: 75px;
+
+}
+
+.community .info-section {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.community .info-section .card {
+   width: 35%;
+   border: none;
+   margin: 0px 80px;
+}
+
+.community .info-section .card h5 {
+   text-align: center;
+}
+
+.community .info-section .card p {
+   text-align: center;
+   padding: 0px;
+   font-weight: bolder;
+   line-height: 20px;
+}
+
+.community .info-section .card img {
+   border-radius: 5px;
+   margin: 5px 0px;
+}
+
+.community .info-section .card .btn {
+   background: var(--mainBlack);
+   width: 25%;
+   margin: 10px auto;
+}
+
+.community .info-section .card .btn:hover {
+   background: var(--mainBlue);
+}
+
+.community .info-section .card .btn a {
+   color: var(--mainWhite);
+   text-decoration: none;
+}
+
+.community .logo-img img {
+   display: block;
+   margin-left: auto;
+   margin-right: auto;
+   width: 35%;
+}
+
+.community .info-section2 {
+   display: grid;
+   grid-template-columns: repeat(3, 1fr);
+   grid-gap: 75px;
+   padding: 50px 75px;
+}
+
+.community .info-section2 .card {
+   border: none;
+}
+
+.community .info-section2 .card h5 {
+   background: var(--mainBlack);
+   color: var(--mainWhite);
+   text-align: center;
+   padding: 5px 0;
+   margin: 15px 0;
+   border-radius: 2px;
+}
+
+.community .info-section2 .card h6 {
+   font-weight: bolder;
+   text-align: center;
+}
+
+.community .info-section2 .card p {
+   padding: 0px;
+   text-align: center;
+   line-height: 15px;
+}
+
+.community .info-section2 .card .links {
+   display: flex;
+   justify-content: center;
+}
+
+.community .info-section2 .card .links a {
+   margin: 0px 8px;
+}
+
+.community .info-section2 .card a {
+   color: var(--mainBlack);
+   text-align: center;
+   font-size: 2rem;
+   cursor: pointer;
+}
+
+.community .info-section2 .card a:hover {
+   color: var(--mainBlue);
+}
+
+@media (max-width: 1024px) {
+   .community .community-img img {
+      width: 50%;
+   }
+
+   .community .community-img .img-2 {
+       width: 18%;
+       margin: 30px;
+   }
+
+   .community .info-section2 {
+      grid-template-columns: 1fr;
+   }
+}
+
+@media (max-width: 768px) {
+   .community .info-section .card {
+      width: 45%;
+      margin: 30px 40px;
+   }
+
+   .community .info-section .card p {
+      font-size: 15px;
+   }
+
+   .community .info-section .card .btn {
+      width: 50%;
+   }
+
+   .community .logo-img img {
+      width: 50%;
+   }
+}
+
+@media (max-width: 600px) {
+   .community h1 {
+      font-size: 35px;
+   }
+
+   .community .community-img {
+      flex-direction: column;
+   } 
+
+   .community .community-img .img-2:nth-child(3) {
+      display: none;
+   }
+
+   .community .community-img img {
+      width: 75%;
+   }
+
+   .community .community-img .img-2 {
+      width: 50%;
+      margin: 5px 0px;
+   }
+
+   .community .overview-text p {
+      padding: 15px 30px;
+   }
+
+   .community .info-section {
+      flex-direction: column;
+   }
+
+   .community .info-section .card {
+      width: 75%;
+   }
+
+   .community .logo-img img {
+      width: 75%;
+   }
+
+   .community .info-section2 {
+      padding: 50px 15px;
+      
+   }
+}
+
+/** Government **/
+.government {
+   background: #fff;
+}
+
+.government h1 {
+   padding: 25px 0px;
+   text-align: center;
+}
+
+.government .logos {
+   display: grid;
+   grid-template-columns: repeat(3, 1fr);
+   justify-items: center;
+   align-items: center;
+   margin: 25px 0;
+}
+
+.government .logos img {
+   width: 25%;
+}
+
+.government .government-intro {
+   width: 80%;
+   margin: auto;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   padding: 50px 0px;
+   box-shadow: 0 10px 15px rgb(0, 0, 0, 0.7);
+   border-radius: 5px;
+}
+
+.government .government-intro .government-img h3 {
+   text-align: center;
+}
+
+.government .government-intro .government-img {
+   width: 50%;
+   border-right: 1px dashed rgb(0, 0, 0, 0.7);
+}
+
+.government .government-intro .government-img img {
+   width: 75%;
+   display: block;
+   margin: 10px auto;
+   border-radius: 5px;
+}
+
+.government .government-intro .government-img p {
+   text-align: center;
+}
+
+.government .government-intro .intro-text {
+   width: 50%;
+}
+
+.government .government-intro .intro-text h3, h6{
+   text-align: center;
+}
+
+.government .government-intro .intro-text .bold {
+   font-weight: bolder;
+}
+
+.government .government-intro .intro-text p {
+   text-align: center;
+   line-height: 35px;
+}
+
+.government .cards-container {
+   display: grid;
+   grid-template-columns: repeat(2, 1fr);
+   grid-gap: 25px;
+   margin: 50px 150px;
+}
+
+.government .cards-container .card {
+   border: none;
+   background: var(--mainGrey);
+   margin: 50px 0px;
+   padding-bottom: 15px;
+}
+
+.government .cards-container .card h5 {
+   background: var(--mainBlack);
+   color: var(--mainWhite);
+   padding: 5px;
+   border-top-left-radius: 3px;
+   border-top-right-radius: 3px;
+   text-align: center;
+}
+
+.government .cards-container .card .bold {
+   font-weight: bolder;
+}
+
+.government .cards-container .card p {
+   line-height: 15px;
+   text-align: center;
+}
+
+.government .cards-container .card img {
+   width: 50%;
+   margin: auto;
+   border-radius: 8px;
+}
+
+.government img {
+   width: 100%;
+}
+
+@media (max-width: 768px) {
+   .government .logos img {
+      width: 35%;
+   }
+
+   .government .government-intro {
+      flex-direction: column;
+   }
+
+   .government .government-intro .government-img {
+      width: 75%;
+      border-right: none;
+      border-bottom: 1px dashed rgb(0, 0, 0, 0.7);
+      padding-bottom: 15px;
+   }
+
+   .government .government-intro .intro-text {
+      width: 75%;
+      margin-top: 15px;
+   }
+
+   .government .cards-container {
+      grid-template-columns: 1fr;
+   }
+
+   .government .cards-container .card img {
+      margin: 15px auto;
+   }
+}
+
+@media (max-width: 600px) {
+   .government h1 {
+      margin: 5px 0px;
+   }
+
+   .government .logos {
+      margin-top: 5px;
+   }
+
+   .government .logos img {
+      width: 55%;
+   }
+
+   .government .government-intro {
+      width: 100%;
+      box-shadow: none;
+      padding: 0px;
+   }
+
+   .government .government-intro .government-img {
+      width: 85%;
+   }
+
+   .government .government-intro .government-img img {
+      margin: 10px auto;
+   }
+
+   .government .government-intro .intro-text {
+      width: 100%;
+   }
+
+   .government .cards-container {
+      margin: 0px 25px;
+      grid-gap: 0px;
+   }
+}
+
+/* Photo Gallery Background Photo */
 .background {
    background: url('../img/Rocky Gap 2.jpg') no-repeat center center/cover;
    background-attachment: fixed;
    height: 100vh;
 } 
+
+.background img {
+   width: 100%;
+}
 
 /* Gallery */
 .gallery-bg{
@@ -318,20 +835,41 @@ body {
    margin: 5px 0;
 }
 
+#gallery .container .hs-img {
+   display: block;
+   margin: 25px auto 25px auto;
+   width: 50%;
+   border: 2px solid var(--mainWhite);
+   border-radius: 5px;
+}
+
 .yearbook {
    display: flex;
    justify-content: center;
    align-items: center;
 }
 
-.book-icon {
+.yearbook .book-icon {
    font-size: 5.5rem;
-   color: var(--mainBlack);
+   color: var(--mainWhite);
    display: inline;
+   margin: 15px 0px;
 }
 
 .book-icon:hover {
    color: var(--mainGrey);
+}
+
+@media (max-width: 768px) {
+   #gallery .container .hs-img {
+      width: 70%;
+   }
+}
+
+@media (max-width: 600px) {
+   #gallery .container .hs-img {
+      width: 85%;
+   }
 }
 
 /* footer icons */
