--- a/css/yearbook-style.css
+++ b/css/yearbook-style.css
@@ -39,7 +39,6 @@ img {
    display: block;
 }
 
-/* Position the image container (needed to position the left and right arrows) */
 .container {
   position: relative;
   max-width: 550px;
@@ -60,7 +59,6 @@ img {
   display: none;
 }
 
-/* Add a pointer when hovering over the thumbnail images */
 .cursor {
   cursor: pointer;
 }
@@ -82,13 +80,11 @@ img {
   -webkit-user-select: none;
 }
 
-/* Position the "next button" to the right */
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
 .prev:hover,
 .next:hover {
   background-color: rgba(0, 0, 0, 0.8);
@@ -147,7 +143,7 @@ img {
   background: #228b22;
 }
 
-/* Add a transparency effect for thumnbail images */
+/* Transparency effect for thumnbail images */
 .demo {
   opacity: 0.6;
 }
