--- a/css/main.css
+++ b/css/main.css
@@ -109,7 +109,7 @@ body {
 .nav-link {
    color: var(--mainWhite);
    text-transform: capitalize;
-   font-family: cursive;
+   font-family: 'Exo', sans-serif;
    font-size: 1rem;
 }
 
