--- a/css/main.css
+++ b/css/main.css
@@ -474,7 +474,9 @@ body {
    display: block;
    margin-left: auto;
    margin-right: auto;
+   margin-top: 15px;
    width: 50%;
+   border-radius: 5px;
 }
 
 .community .info-section2 {
