--- a/css/yearbook-style.css
+++ b/css/yearbook-style.css
@@ -1,146 +1,115 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 body {
-  font-family: "Sans-Serif";
-  margin: 0;
-  background-image: url("../yearbook-img/background.jpg");
+  background: url("../img/background.jpg");
+  font-family: 'Poppins', sans-serif;
 }
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-h1 {
-   color: #fff;
-   text-align: center;
-   margin-top: 1em;
+.container {
+  width: 65%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #fff;
+  border-radius: 5px;
+  padding: 15px 15px 15px 5px;
 }
 
-h1.two {
-   margin: 0em auto 1em auto;
+.img-container {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-h2 {
-   color: #002100;
-   text-align: center;
-   background: #fff;
-   margin: 0;
-}
-
-img {
-  vertical-align: middle;
+#main-img img,
+.imgs img {
   width: 100%;
 }
 
-.img2 {
-   width: 200px;
-   margin-left: auto;
-   margin-right: auto;
-   padding: 0px;
-   display: block;
+#main-img img {
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
-.container {
-  position: relative;
-  width: 30%;
-  overflow: visible;
-  margin: 25px auto;
-  border: 3px solid #fff;
-  border-radius: 5px;
-}
-
-@media only screen and (max-width: 1024px) {
-  .container {
-     width: 50%;
-    }
-  }
-  
-@media only screen and (max-width: 820px) {
-.container {
-   width: 75%;
-  }
-}
-
-@media only screen and (max-width: 600px) {
-  .container {
-     width: 85%;
-    }
-  }
-
-/* Hide the images by default */
-.mySlides {
-  display: none;
-}
-
-.cursor {
+#prev-button,
+#next-button {
+  background: none;
+  border: none;
   cursor: pointer;
-}
-
-/* Next & previous buttons */
-.prev,
-.next {
-  cursor: pointer;
-  position: absolute;
-  top: 28%;
-  width: auto;
-  padding: 16px;
-  margin-top: -50px;
-  color: white;
+  color: #000;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 1.5rem;
   border-radius: 0 3px 3px 0;
-  user-select: none;
+  padding: 0 5px;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
   -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
 }
 
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* Container for image text */
-.caption-container {
-  text-align: center;
-  background-color: #002100;
-  padding: 1px;
-  color: white;
-}
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Columns side by side */
-.column {
-  float: left;
-  width: 9.09%;
-  border: 1px solid #fff;
-}
-
-.yearbooks-link {
-  background: #fff;
+#caption-container {
+  background: #002100;
   color: #fff;
-  padding: 10px 0;
+  font-size: 1rem;
+  font-weight: 300;
   text-align: center;
+  padding: 5px 0;
+  border-bottom: 2px solid #000;
+  border-left: 2px solid #000;
+  border-right: 2px solid #000;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
-.yearbooks-link a {
-  text-decoration: none;
+.gallery-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+  padding: 0 0 0 5px;
+  margin-bottom: 10px;
+}
+
+.gallery-container h2 {
+  width: 100%;
   color: #fff;
+  background: #002100;
+  text-align: center;
+  font-size: 1rem;
+  margin-top: 10px;
+  margin-bottom: 3px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.imgs {
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(11, 1fr);
+  grid-gap: 5px;
+}
+
+.imgs img {
+  cursor: pointer;
+}
+
+.imgs img:hover  {
+  opacity: 0.6 !important;
 }
 
 .link-btn {
@@ -148,18 +117,135 @@ img {
   border: none;
   border-radius: 5px;
   padding: 10px 25px;
+  margin-top: 15px;
 }
 
 .link-btn:hover {
   background: #228b22;
 }
 
-/* Transparency effect for thumnbail images */
-.demo {
-  opacity: 0.6;
+.link-btn a {
+  text-decoration: none;
+  color: #fff;
 }
 
-.active,
-.demo:hover {
-  opacity: 1;
+.school-banner {
+  margin-top: 15px;
+}
+
+.school-banner h1 {
+  color: #228b22;
+  text-transform: uppercase;
+  font-size: 1.5rem;
+}
+
+.gallery-container .banner-img  {
+  width: 100%;
+  margin-top: 25px;
+}
+
+/* Fade in animation */
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
+
+.fade-in {
+  opacity: 0;
+  animation: fadeIn 0.5s ease-in 1 forwards;
+}
+
+@keyframes fadeOut {
+  to {
+    opacity: 1;
+  }
+}
+
+.fade-out {
+  opacity: 0;
+  animation: fadeIn 0.5s ease-in 1 forwards;
+}
+
+
+@media (max-width: 1024px) {
+  .container {
+    width: 75%;
+  }
+}
+
+@media (max-width: 820px) {
+  .container {
+    width: 90%;
+    flex-direction: column;
+    position: relative;
+    transform: translate(-50%, 0%);
+    padding: 35px 0;
+    margin: 35px 0;
+  }
+
+  .img-container {
+    width: 90%;
+  }
+
+  .gallery-container {
+    width: 90%;
+    padding: 0;
+  }
+
+  #prev-button,
+  #next-button {
+    font-size: 2.5rem;
+    position: absolute;
+    top: 28%; 
+    width: auto;
+    margin-top: -50px;
+  }
+
+  #prev-button {
+    left: 3px;
+  }
+
+  #next-button {
+    right: 3px;
+    border-radius: 3px 0 0 3px;
+  }
+
+  #caption-container {
+    font-size: 1.5rem;
+  }
+
+  .gallery-container h2 {
+    font-size: 1.3rem;
+  }
+}
+
+@media (max-width: 600px) {
+  .container {
+    padding: 20px 0;
+    margin: 20px 0 ;
+  }
+
+  #prev-button,
+  #next-button {
+    top: 25%;
+    font-size: 1.8rem;
+  }
+
+  #prev-button {
+    left: -3px; 
+  }
+
+  #next-button {
+     right: -3px;
+  }
+
+  #caption-container {
+    padding: 3px 0;
+    font-size: 1rem;
+  }
+
+  .gallery-container h2 {
+    font-size: 0.8rem;
+  }
 }
