--- a/css/yearbook-style.css
+++ b/css/yearbook-style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 body {
-  background: url("../img/background.jpg");
+  background: url("../yearbook-img/background.jpg");
   font-family: 'Poppins', sans-serif;
 }
 
