--- a/css/yearbook-style.css
+++ b/css/yearbook-style.css
@@ -2,7 +2,7 @@
 
 body {
   font-family: "Sans-Serif";
-  background-image: url("yearbook-img/background.jpg");
+  background-image: url("../yearbook-img/background.jpg");
   font-family: 'Poppins', sans-serif;
 }
 
