--- a/css/education.css
+++ b/css/education.css
@@ -67,8 +67,9 @@
     text-decoration: none;
  }
  
- .education .btn:hover {
-    background: #ff8600;
+ .education .btn:hover:not(:focus-within) {
+   transition: opacity 0.6s step-end;
+   background: #ff8600 ;
  }
  
  .education .info-text {
