--- a/css/community.css
+++ b/css/community.css
@@ -69,8 +69,9 @@
     font-family: 'Exo', sans-serif;
  }
  
- .community .info-section .card .btn:hover {
-    opacity: 0.7;
+ .community .btn:hover:not(:focus-within) {
+   transition: opacity 0.6s step-end;
+   background: var(--mainGrey);
  }
  
  .community .info-section .card .btn a {
