--- a/css/community.css
+++ b/css/community.css
@@ -69,7 +69,7 @@
     font-family: 'Exo', sans-serif;
  }
  
- .community .btn:hover:not(:focus-within) {
+ .community .info-section .card .btn:hover:not(:focus-within) {
    transition: opacity 0.6s step-end;
    background: var(--mainGrey);
  }
