--- a/css/community.css
+++ b/css/community.css
@@ -226,7 +226,7 @@
        margin: 15px 0;
     }
  
-    .community .logo-img img {
+    .community .square-logo img {
        width: 85%;
     }
  
