--- a/css/community.css
+++ b/css/community.css
@@ -12,6 +12,7 @@
  .community .overview-text p {
     padding: 25px 75px;
     text-align: center;
+    font-size: 1.2rem;
  }
  
  .community .community-img {
