--- a/css/community.css
+++ b/css/community.css
@@ -115,6 +115,7 @@
  }
  
  .community .info-section2 .card h6 {
+    font-size: 1rem;
     font-weight: bolder;
     text-align: center;
     margin-top: 10px;
